--- a/cs303/hw7.tex
+++ b/cs303/hw7.tex
@@ -54,6 +54,7 @@ $Final Array:$& 7& 40& 42& 57& 78& 79& 80& 83& 84& 86& 89& 91
 Number of Swaps: 4\\
 Total Shifts and Swaps: 14}
 
+\pagebreak
 \item Initial Input: 
 $
 \begin{array}{cccccccccccc}
@@ -105,7 +106,8 @@ Total Number of Shifts and Swaps: 16}
 
 \item It is better to use a hybrid strategy over only having one sort because the best of both algorithms can be used. In our case
   the insertion sort is better suited to the smaller cases, while quicksort is better for larger cases. The values from the previous
-  questions did not support my assertion, but this is only because the size of $a$ is not large enough.
+  questions did not support my assertion, but this is only because there were several unnecessary insertion sort movements done on a
+  partition with only one element. Without the unnecessary swaps, the hybrid strategy can be shown to be more effective.
 
 \item The quicksort will still work because it does not matter where the pivot is placed.
 \[
