--- a/cs423/hw7/hw7.tex
+++ b/cs423/hw7/hw7.tex
@@ -71,7 +71,7 @@
 	\end{itemize}
 	Since all cases result in $s \notin C$, there is a contradiction, proving that $C$ is not context free.
 	
- \item (10 points) Problem 2.42 on page 131. (Hint: $s=1^{p+1}\#1^{p+2}\#...\#1^{3p}$). \\
+ \item (10 points) Problem 2.42 on page 131. (Hint: $s=1^{p+1}\#1^{p+2}\#...\#1^{3p}$).u \\
         Assume $Y$ is context free. The pumping lemma applies. Let $p$ be the pumping length. Let string $s = 1^{p+1}\#1^{p+2}\#...\#1^{3p}
         \in Y$ 	and $|s| \geq p$ with $s= uvxyz$, $|vy| > 0$ and $|vxy| \leq p$ and $\forall i \geq 0$, $uv^ixy^iz \in C$. \\
         Let $i = 2$ for Case 1, $i=0$ for Case 2, and $i = 3$ for Case 3:
