--- a/cs423/hw9/hw9.tex
+++ b/cs423/hw9/hw9.tex
@@ -91,7 +91,13 @@ a one-to-one function and onto (aka a bijection). Therefore T is countable.
 \centerline{\bf Reading Summary 4}
 
 \begin{spacing}{1.5}
- 
+ \indent The turing machine is far from being bettered by other models. Over 75 years, the Turing Machine is still considered the best machine
+ model availble. It can be used to model both modern computing and the natural world. What we have learned over the years in computing is a
+ result of the model. \\
+ \indent The Turing machine was so special because it disembodied the machine and broadened the view of computation. It brought the view away
+ from what goes specifically into the machine, but how the machine reacts and works as a whole. There are also challenges to the standard model,
+ which all have an impact on universality. The most generally respected challenge to the model is that ``one can apply it ever more widely to what
+ we observe in nature, and let it mold our expectations of what computing machines can achieve.
 \end{spacing}
 
 
