--- a/cs423/hw9/hw9.tex
+++ b/cs423/hw9/hw9.tex
@@ -102,7 +102,15 @@ a one-to-one function and onto (aka a bijection). Therefore T is countable.
  \indent The impressionists are a large force in the community of real-world ''computation``. Real-world computation is how nature and people in
  the real world compute. The old definition of computation being steps carried out by a computer is now being challenged by the idea that computation
  is something can be a non-stop natural process. Some believe that this old idea is a result of a ''Mathematical Bias`` because the founders of
- computing were mathematicians. 
+ computing were mathematicians. \\
+ \indent To capture much of the computational aspects of nature, people have turned to creating models to be analyzed. Hypercomputational 
+ packages is one model that is subject to much disagreement. Some think that this idea of computational models that go beyond the Turing Machine
+ are impossible and wrong, while others believe that hypercomputational packages are the way forward. \\
+ \indent Finally, the halting set is used by many scholars to explain incomputability. They believe that incomputability is simply the halting set
+ with an existential quantifier added. As it is described, ''All the fuss and descriptive variety associated with incomputability in nature and 
+ its models merely cloak avatars of halting sets for different machines.``  \\
+ \indent Even with the amount of discourse between scholars regarding the future of the Turing Machine, there is no doubt that it's impact is huge among
+ the subject of computability and will continue to play a factor in the future.
 \end{spacing}
 
 
