completed hw11 reading summary

--- a/cs423/hw11/hw11.tex
+++ b/cs423/hw11/hw11.tex
@@ -86,7 +86,29 @@
 \centerline{\bf Reading Summary 5}
 
 \begin{spacing}{1.5}
- 
+\indent The $P$ versus $NP$ discussion is a problem that is unlikely to be solved in the near future, but its research has driven numerous
+  topics in varying computational problems. This article looks at how people have tried to solve the $P$ versus $NP$ problem and how it has
+  shaped the research of computer science. It also shows how to handle $NP$-complete problems, a new proof strategy, the possibility that
+  quantum computing can help to solve $NP$-complete problems, and finally an idea to ``separate $P$ from $NP$ using using algebraic-geometric
+  techniques.'' \\
+\indent The $P$ versus $NP$ problem is one that compares whether or not $P$, algorithms that run in polynomial time, is equal to $NP$,
+  nondeterministic polynomial time. If $P=NP$, then ``for every problem that has an efficiently verifiable solution, we can find that solution
+  efficiently as well.'' This would mean that there would be a simple efficient algorithm to solve any $NP$-complete problem, which would in
+  turn allow us to apply these solutions to improve real world issues. Many researchers believe that it is impossible for this to happen, so
+  many strategies such as diagonalization, circuit complexity, and proof complexity have been used in an attempt to prove that $P \neq NP$. \\
+\indent Dealing with $NP$-complete problems will undoubtedly be very difficult because of the $P$ versus $NP$ issue. To deal with any real world
+  $NP$-complete problems one can utilize a host of strategies. Brute force methods, parameterized complexity, approximation, and Heuristics and
+  Average-Case Complexity are some available strategies to solve these problems. Usually one will have to use a combination of these techniques
+  in order to fully solve an $NP$-complete problem. \\
+\indent Interactive proof models is one strategy being used to find a solution. PCPs fall under this category and can be used to
+  ``to show the limitations of approximation for a large number of optimization questions.'' Quantum computing is also an option that is being
+  explored. The author is highly doubtful that these machines, if even capable of being built, will be able to solve the problem. It is cited
+  that Shor's quantum computing algorithm ``cannot be applied to generic "black-box" search problems so any algorithm would have to use
+  some special structure of NP-complete problems that we don't know about.'' The most hopeful method being researched is through the use of
+  algebro-geometric polygons to define group representations. And even if this method does work, they predict that it will take at least
+  100 years to complete.\\
+\indent The $P$ versus $NP$ problem is one that we have only begun to truly uncover. It has promoted many different research areas and will
+  remain one of the top problems to solve in the field of Computer Science.
 \end{spacing}
 
 
