fixed several hws. 3, 5, 7, 8 are left to be completed

--- a/cs423/hw2/hw2.tex
+++ b/cs423/hw2/hw2.tex
@@ -48,7 +48,8 @@
   \begin{center}
     \includegraphics[scale=.4] {fig4.pdf} \\
     0 denotes null state
-  \end{center}  
+  \end{center}
+  This FA recognizes all sets of strings except those that start with $b$ or contain $bab$ anywhere within the string.
 
   \item(10 points) Problem 1.32 on page 88. \\
   \begin{center}
