--- a/cs423/hw6/hw6.tex
+++ b/cs423/hw6/hw6.tex
@@ -46,7 +46,7 @@
       \end{center}
 
   \item (8 points) Problem 2.26 on page 130. \\
-    First, the derivation involves the rules that follow the form $S \implies A_1A_2A_3 \dots A_n$.
+    First, the derivation involves the rules that follow the form $S \implies A_1A_2$.
     The derivation of $w$ will require $n-1$ uses of this type because a variable
     will need to be added for the increase in size. Second, the terminals being derived
     will take the for $S \implies a$. Thus because the $n$ number of derivations from
@@ -64,6 +64,7 @@
 	    $S \to aSbb|B $ \\
 	    $B \to bB | b $
     \end{enumerate}
+    All three are CFLs, therefore the union of them is also a CFL.
 
 \end{enumerate}
 
