fixed all finite hws

--- a/cs423/hw3/hw3.tex
+++ b/cs423/hw3/hw3.tex
@@ -37,7 +37,7 @@
  \item (4 points each) Exercise 1.18 (e) (f) (j) on page 86.
   \begin{description}
    \item e. $(0 \cup 1 (0 \cup 1)) ((0 \cup 1)(0 \cup 1))^*$
-   \item f. $(0^* (10^+ ))1^* $
+   \item f. $0^*(10)^*0^*(1 \cup \epsilon)0^*(01)^*1^* $
    \item j. $00^+ \cup 100^+ \cup 0^+ 10^+ \cup 00^+1 $
   \end{description}
 
