--- a/cs423/hw8/hw8.tex
+++ b/cs423/hw8/hw8.tex
@@ -40,15 +40,17 @@
     \end{center}
     
      The configuration for TM $M$ for input string 000000 is: \\
-     q1000000 \\ q20000 \\ Xq30000 \\ X0q4000 \\ X0Xq300 \\ X0X0q40 \\ X0X0Xq3 \\ X0X0q50 \\ X0Xq5X0 \\ X0q50X0 \\ Xq5X0X0 \\ q50X0X0 \\
-     q5X0X0X0 \\ q20X0X0 \\ Xq3X0X0 \\ XXq30X0 \\ XXXq3X0 \\ XXX0q40 \\ XXX0X $q_{reject}$
+     $\sqcup$q1000000 \\ $\sqcup$q20000 \\ $\sqcup$Xq30000 \\ $\sqcup$X0q4000 \\ $\sqcup$X0Xq300 \\ $\sqcup$X0X0q40 \\ $\sqcup$X0X0Xq3 \\
+     $\sqcup$X0X0q50 \\ $\sqcup$X0Xq5X0 \\ $\sqcup$X0q50X0 \\ $\sqcup$Xq5X0X0 \\ $\sqcup$q50X0X0 \\ $\sqcup$q5X0X0X0 \\ $\sqcup$q20X0X0 \\
+     $\sqcup$Xq3X0X0 \\ $\sqcup$XXq30X0 \\ $\sqcup$XXXq3X0 \\ $\sqcup$XXX0q40 \\ $\sqcup$XXX0X $q_{reject}$
 
   \item (10 points) Exercise 3.8 (b) on page 160.
     \begin{enumerate}
-     \item Accept string if empty
-     \item Make a pass from left to right, marking two 0s and one 1.
-     \item If unable to perform step (b), $reject$
-     \item Repeat step (b) and (c) until the string has only marked symbols, then $accept$.
+      \item Search from left-to-right for a 0; when one is found, write x on the cell
+      \item Go back to the beginning and search for a 1, if one is found, write x on the cell; if none is found,reject.
+      \item Go back to the beginning and search for another 1, if one is found, write x on the cell; if none is found, reject.
+      \item Go back to step 1
+      \item If there are only x’s then accept; otherwise, reject
     \end{enumerate}
 
   \item (10 points) Problem 3.15 (b), (c) and (e) on page 161.
